Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-55461

QHeaderView::isSectionHidden() might return false even though section is really hidden

    XMLWordPrintable

Details

    • 8713f22372b7aa63ecafbe87214b8994203fac5f (qt/qtbase/dev)

    Description

      Unfortunately this is difficult to reproduce and I have not found a way to reproduce this issue in a small application.

      How ever, looks like something goes wrong internally and hiddenSectionSize is empty, which leads to isSectionHidden to return false. Please see attached image.

      Attachments

        For Gerrit Dashboard: QTBUG-55461
        # Subject Branch Project Status CR V

        Activity

          People

            chehrlic Christian Ehrlicher
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes